# meeting-intent-eval

./: .gitignore  CROSS_MODEL.md  README.md  REPORT.md  rescore.py  run_ablations_v2.py  run_ablations_v4_only.py  run_eval.py  run_eval_comparison.py  run_eval_softcommit.py
environments/meeting_intent/: meeting_intent.py  meeting_intent_multiturn.py  meeting_intent_softcommit.py  pyproject.toml  test_multiturn.py  test_rubric.py  test_softcommit.py
environments/meeting_intent/data/: brainstorm_001.txt  brainstorm_001_ground_truth.json  brainstorm_no_commits_009.txt  brainstorm_no_commits_009_ground_truth.json  customer_call_004.txt  customer_call_004_ground_truth.json  design_crit_002.txt  design_crit_002_ground_truth.json  eng_standup_003.txt  eng_standup_003_ground_truth.json  exec_sync_005.txt  exec_sync_005_ground_truth.json  hiring_debrief_008.txt  hiring_debrief_008_ground_truth.json  pipeline_review_006.txt  pipeline_review_006_ground_truth.json  prod_triage_010.txt  prod_triage_010_ground_truth.json  real_client_001.txt  real_client_001_ground_truth.json  real_earnings_001.txt  real_earnings_001_ground_truth.json  real_earnings_002.txt  real_earnings_002_ground_truth.json  real_earnings_003.txt  real_earnings_003_ground_truth.json  support_escalation_007.txt  support_escalation_007_ground_truth.json
results/: ABLATIONS.md  ABLATIONS_V2.md  COMPARISON.md  DIAGNOSTIC.md  DOC_UPDATE.md  HUMAN_VS_MODEL.md  MEDIUM_DIFFICULTY.md  ONE_PAGER.md  RAW_OUTPUTS.md  RUBRIC_SENSITIVITY.md  diagnostic_build.py  eval_comparison_multiturn.json  eval_comparison_singleturn.json  eval_results.json  eval_results_adv2.json  eval_results_client_only.json  eval_results_haiku45_real.json  eval_results_haiku45_real_003.json  eval_results_hard3.json  eval_results_real_only.json  eval_results_sonnet46_real.json  final_aggregate.json  raw_samples.json  raw_samples_adv2.json  raw_samples_client_only.json  raw_samples_comparison_multiturn.json  raw_samples_comparison_singleturn.json  raw_samples_haiku45_real.json  raw_samples_haiku45_real_003.json  raw_samples_hard3.json  raw_samples_real_only.json  raw_samples_sonnet46_real.json
results/ablations/: ablations_v2_all.json  run_log_v2.txt  softcommit_full.json  softcommit_full_raw.json  softcommit_smoke_real_earnings_001.json  softcommit_smoke_real_earnings_001_raw.json  v2_dialogue_explicit.json  v3_few_shot.json  (+4 more)
smoke_test/: SMOKE_VERDICT.md  candidates.json  candidates2.json  fetch_candidates.py  fetch_more.py  ground_truth.json  raw_samples.json  results.json  run_eval.py  score.py  usage.json
(+24 files in other folders)
