[project]
name = "meeting_intent"
description = "Extract real action items from messy, informal meeting transcripts. Tests structured-output compliance and the model's ability to distinguish committed work from casual brainstorming."
tags = ["meetings", "extraction", "structured-output", "json", "reasoning", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["meeting_intent.py", "pyproject.toml", "data/**/*", "README.md"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 32
