[project]
name = "meeting_intent"
description = "Real meeting transcripts with dialogue-confirmation action item extraction. Tests model judgment on multi-turn workplace dialogue."
tags = ["meetings", "action-items", "dialogue", "real-data", "multi-turn-judgment"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "meeting_intent.py",
    "meeting_intent_multiturn.py",
    "pyproject.toml",
    "data/**/*",
    "README.md",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 32
