[project]
name = "meeting_intent"
description = "Real meeting transcripts with dialogue-confirmation action item extraction. Tests model judgment on multi-turn workplace dialogue."
tags = ["meetings", "action-items", "dialogue", "real-data", "multi-turn-judgment"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets",
    # Pinned: newer openai-agents trips a Python 3.11.0 typing bug
    # (TContext TypeVar) when verifiers imports agents.function_schema
    # for tool schema generation. 0.0.16 is the last version that works
    # on stock 3.11.0 and exposes the function_schema API verifiers needs.
    "openai-agents==0.0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "meeting_intent.py",
    "meeting_intent_multiturn.py",
    "meeting_intent_softcommit.py",
    "pyproject.toml",
    "data/**/*",
    "README.md",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 32
